site.css
/* Inline Elements & Typography */
*, *:after, *:before {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

body {
  width: 100%;
  font-family: 'Hammersmith One', sans-serif;
  background-color: #f7f7f7;
  color: #171714;
}

h1, h4 {
  text-transform: uppercase;
  letter-spacing: 0.5em;
}

p {
  font-family: 'Josefin Sans', sans-serif;
  line-height: 1.4em;
}

a {
  color: #777;
  text-decoration: none;
}

a:hover {
  color: #F7322A;
}

header{
  width: 100%;
  background-color: #171714;
  height: 50px;
  padding: 10px 0 10px 20px;
}

header h2, header a, header a:hover {
  text-transform: uppercase;
  letter-spacing: 0.3em;
  color: #ffffff;
  margin: 0;
}

ul {
  font-family: 'Josefin Sans', sans-serif;
  list-style: none;
  padding-left: 1em;
  text-indent: -0.75em;
  line-height: 1.4em;
}

.top {
  width: 100%;
  color: #ffffff;
  display: flex;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;   
  align-items: center;
  justify-content: space-around;
}

.center {
  width: 685px;
  padding: 0 120px 0 130px;
}

.previous, .next {
  height: 80px;
}

.previous a, .next a {
  color: #ffffff;
}

#index-top {
  background-color: #171714;
}

#civicfix {
  background-color: #fd4c48;
}

#civicfix-pic {
  width: 685px;
}

.main {
  width: 660px;
  margin: auto;
  padding: 40px 0;
}

.main h2 {
  margin: 0 0 10px 0;
  padding-bottom: 5px;
  border-bottom: 1px solid #dddddd;
}

.colleft {
  width: 400px;
  float: left;
  margin: 0 0 40px 0;
  padding-right: 20px;
  border-right: 1px solid #dddddd;
}

.colright {
  width: 220px;
  float: left;
  margin: 0 0 40px 0;
  padding-left: 20px;
}

.colleft h2, .colright h2 {
  border: none;
}

.resume{
  margin: 0 0 30px 0;
  clear: both;
}

.resume p {
  margin-bottom: 5px;
}

.resume ul {
  margin: 0;
}

.resume ul:last-child {
  margin-bottom: 30px;
}

.colthird {
  width: 220px;
  float: left;
}

.hidden {
  display: none;
}

.entypo {
  font-family: 'Entypo', 'Entypo Social';
}

/* Tablet Layout */
@media only screen and (max-width:770px) {
  .hide-tablet { display:none; }
  .show-tablet { display:block; }
  }

/* Mobile Layout */
@media only screen and (max-width:640px) {
  .col1,
  .col2,
  .col3,
  .col4,
  .col5,
  .col6,
  .col7,
  .col8,
  .col9,
  .col10,
  .col11,
  .col12 { width:100%; max-width:100%; }
  .margin0,
  .margin1,
  .margin2,
  .margin3,
  .margin4,
  .margin5,
  .margin6,
  .margin7,
  .margin8,
  .margin9,
  .margin10,
  .margin11,
  .margin12 { margin-left:0; }
  .pad4c { padding:0; }
  .pad4,
  .pad4h { padding-left:20px; padding-right:20px; }
  .pad8 { padding:40px 20px; }
  .hide-mobile { display:none; }
  .show-mobile { display:block; }
  .icon {
    background-image:url(img/sprite@2x.png);
    background-size:240px 240px;
    }
  }

